force-app/main/default/objects/Municipio__c/Municipio__c.object-meta.xml
<CustomObject>
    <label>Localidad</label>
    <nameField>
        <label>Nombre de Municipio</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Localidades</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>