force-app/main/default/objects/Municipio__c/fields/Codigo_municipio__c.field-meta.xml
<CustomField>
    <fullName>Codigo_municipio__c</fullName>
    <label>Código municipio</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>