force-app/main/default/objects/Municipio__c/fields/Digito_control__c.field-meta.xml
<CustomField>
    <fullName>Digito_control__c</fullName>
    <label>Dígito de control</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>