force-app/main/default/objects/Municipio__c/fields/OLDID__c.field-meta.xml
<CustomField>
    <fullName>OLDID__c</fullName>
    <label>OLDID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>