force-app/main/default/objects/Municipio__c/fields/Provincia__c.field-meta.xml
<CustomField>
    <fullName>Provincia__c</fullName>
    <label>Provincia</label>
    <referenceTo>Provincia__c</referenceTo>
    <relationshipName>Municipios</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>